Authenticate and AutoJoin on CreateGame
